테스트하기 어려운 영역을 분리하기