@@ -2,7 +2,10 @@ package me.sungbin.unit;
 
 import me.sungbin.unit.beverage.Americano;
 import me.sungbin.unit.beverage.Latte;
+import me.sungbin.unit.order.Order;
 import org.junit.jupiter.api.Test;
+
+import java.time.LocalDateTime;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
@@ -16,7 +19,7 @@ class CafeKioskTest {
         cafeKiosk.add(new Americano());
 
         System.out.println(">>> 담긴 음료 수: " + cafeKiosk.getBeverages().size());
-        System.out.println(">>> 담긴 음료: " + cafeKiosk.getBeverages().get(0).getName());
+        System.out.println(">>> 담긴 음료: " + cafeKiosk.getBeverages().getFirst().getName());
     }
 
     @Test
@@ -25,7 +28,7 @@ class CafeKioskTest {
         cafeKiosk.add(new Americano());
 
         assertThat(cafeKiosk.getBeverages()).hasSize(1);
-        assertThat(cafeKiosk.getBeverages().get(0).getName()).isEqualTo("아메리카노");
+        assertThat(cafeKiosk.getBeverages().getFirst().getName()).isEqualTo("아메리카노");
     }
 
     @Test
@@ -74,5 +77,30 @@ class CafeKioskTest {
 
         cafeKiosk.clear();
         assertThat(cafeKiosk.getBeverages()).isEmpty();
+    }
+
+    @Test
+    void createOrder() {
+        CafeKiosk cafeKiosk = new CafeKiosk();
+        Americano americano = new Americano();
+
+        cafeKiosk.add(americano);
+
+        Order order = cafeKiosk.createOrder(LocalDateTime.of(2024, 10, 10, 10, 0));
+
+        assertThat(order.getBeverages()).hasSize(1);
+        assertThat(order.getBeverages().getFirst().getName()).isEqualTo("아메리카노");
+    }
+
+    @Test
+    void createOrderOutsideOpenTime() {
+        CafeKiosk cafeKiosk = new CafeKiosk();
+        Americano americano = new Americano();
+
+        cafeKiosk.add(americano);
+
+        assertThatThrownBy(() -> cafeKiosk.createOrder(LocalDateTime.of(2024, 10, 10, 9, 59)))
+                .isInstanceOf(IllegalArgumentException.class)
+                .hasMessage("주문 시간이 아닙니다. 관리자에게 문의하세요.");
     }
 }
